--- a/wiki/业务知识.org
+++ b/wiki/业务知识.org
@@ -17,6 +17,8 @@
     - [[#帐户迁移率怎么计算][帐户迁移率怎么计算？]]
   - [[#名词解释][名词解释]]
     - [[#label-定义][label 定义]]
+    - [[#账单日与还款日][账单日与还款日]]
+    - [[#roaroeroi][ROA\ROE\ROI]]
     - [[#表现期观察期观察点][表现期，观察期，观察点]]
     - [[#贷款][贷款]]
       - [[#循环贷款][循环贷款]]
@@ -51,7 +53,9 @@
       - [[#业务相关][业务相关]]
       - [[#贷款产品类型][贷款产品类型]]
   - [[#基本的信贷逻辑][基本的信贷逻辑]]
-  - [[#授信数据提供商][授信数据提供商]]
+    - [[#反欺诈][反欺诈]]
+    - [[#风险定价][风险定价]]
+    - [[#贷后流转][贷后流转]]
   - [[#参与项目][参与项目]]
       - [[#相关策略][相关策略]]
         - [[#授信流程][授信流程]]
@@ -131,11 +135,10 @@
 预授信是刚开始的一种活动是吧？
 现在已经没有预授信类吧？现在都是申请制？ 我看 wiki 资料上导流到芝麻渠道\同盾渠道\百融渠道等等是什么意思？
 *** 预授信阶段会查询互金吧？
-
 包括自有数据也会有？
 
+预授信阶段不查友盟，但是会查询互金，百融，app.
 *** 巴塞尔新资本协议有哪些内容？
-
 *** 目前，授信通过率多少？
 *** 模型的通过率
 大致在 40% 左右。
@@ -204,14 +207,28 @@ C-M1=当月进入 M1 的贷款余额/上月末 C 的贷款余额
 M2-M3=当月进入 M3 的贷款余额/上月末 M2 的贷款余额
 
 继续补充 https://www.zhihu.com/question/51583052
+*** 账单日与还款日
+大部分银行的信用卡还款日都是账单日后的 20 天。比如你的信用卡账单日是 19 号，就是说 2 月 20 日—3 月 19 日为一个账单周期，如果按照账单日后 20 天为还款日的话，该周期的还款日为 4 月 8 日。
+*** ROA\ROE\ROI
+ROA = 利润额/资产平均总额，用于衡量企业运用所有资产获得利润的能力
+
+- ROE 净资产收益率
+
+ROE = 利润额/股东权益, 用于衡量企业运用股东所投入资本获得利润的能力。
+
+比如：小白开一家饭店，总共花了 50 万元，一年后缴完税赚了 10 万元，那么小白公司的 ROE=10 万/50 万=20%，如果小白公司存在负债 2 万，需要在净利润中扣除，再重新计算，即小白公司的 ROE=（10 万-2 万）/50 万=16%。
+
+净利润率 = 净利润/营业收入，主要反映公司产品的盈利能力。
+
+资产周转率 = 营业收入/总资产，主要反映公司所有资产从投入到产出的流转速度，指标越高，销售能力越强，资产利用效率越高。
+
+- ROI 投资回报率
 
 *** 表现期，观察期，观察点
 在坐标轴上位置为，观察期\观察点\表现期。
 
-观察期：时间轴左侧， *主要是用来生成用户特征的时间区间* ，不宜太长也不宜太短（为啥不
-宜太长），一般为 1 年到 3 年左右。在小米信贷中，观察期一般是瞬时的概念，一般是观
-察点数据，特别是自有数据，外部数据，特别是多头类的数据，会有 2-3 年，征信数据甚
-至到 5 年。观察期不能过长可能导致大量客户无法获取相应时间长度的数据,大批样本不能
+观察期：时间轴左侧， *主要是用来生成用户特征的时间区间* ，不宜太长也不宜太短（为啥不宜太长），一般为 1 年到 3
+年左右。在小米信贷中，观察期一般是瞬时的概念，一般是观察点数据，特别是自有数据，外部数据，特别是多头类的数据，会有 2-3 年，征信数据甚至到 5 年。观察期不能过长可能导致大量客户无法获取相应时间长度的数据,大批样本不能
 进入模型; 观察期过短导致无法真正充分暴露用户的违约风险.
 
 观察点：这个点并不是一个具体时间点，在时间坐标轴上处于观察期和表现期中间，而是一个时间区段，表示的是客户申请贷款的时间，
@@ -225,15 +242,15 @@ M2-M3=当月进入 M3 的贷款余额/上月末 M2 的贷款余额
 史数据将越陈旧，建模样本和未来样本的差异也越大。反之，表现期越短，风险还未暴露完
 全，但好处是能用到更近的样本。 *表现期是用来定义标签 $Y$. *
 
-
 *通过率\逾期率\收益率*
 
 *** 贷款
 **** 循环贷款
-特点：需要抵押！信用卡是典型的循环贷产品。
-循环贷是指客户将商品住房（或信用免担保）抵押给银行、小贷机构，就可获得一定的贷款额度，在房产抵押期限内客户可分次提款、循环使用，不超过可用额度单笔用款时，只需客户填写提款申请表，不用专门再次审批，一般 1 小时便可提取现金，等于随身有了一个安全又方便的流动大“金库”。
+特点：需要抵押！信用卡是典型的循环贷产品。循环贷是指客户将商品住房（或信用免担保）抵押给银行、小贷机构，就可获得一定的贷款额度，在房产抵押期限内客户可分次提款、循环使用，不超过可用额度单笔用款时，只需客户填写提款申请表，不用专门再次审批，一般 1 小时便可提取现金，等于随身有了一个安全又方便的流动大“金库”。
 **** 循环额度下分账户
+
 循环额度下分账户用于循环授信额度下逐笔管理的贷款， *逐笔意为需要针对每一笔借款分开归还,循环贷用于循环额度下还款统一管理的贷款，即每月根据当前累计借款余额计算出的还款金额，需借款人统一归还.*
+
 **** 非循环贷款
 针对的是循环贷款，不能分次提款和循环使用。
 **** 大额专项分期
@@ -241,16 +258,11 @@ M2-M3=当月进入 M3 的贷款余额/上月末 M2 的贷款余额
 *** 账龄（MOB）
 指资产放款月份，一旦申贷订单被放款，也就有了账龄和生命周期。MOB0：放款日至当月月底，MOB1：放款后第二个完整的月份，MOB2：放款后第三个完整的月份。
 
-MOB 的最大值取决于信贷产品期限，如果是 12 期产品，那么该资产的生命周期是 12 期，MOB 最大到 MOB12.
-例如：2019 年 11 月 13 日放款的订单，2019 年 11 月是 mob0，2019 年 12 月是 mob1，以此类推。
+MOB 的最大值取决于信贷产品期限，如果是 12 期产品，那么该资产的生命周期是 12 期，MOB 最大到 MOB12.例如：2019 年 11 月 13 日放款的订单，2019 年 11 月是 mob0，2019 年 12 月是 mob1，以此类推。
 
 账龄分析主要分析账户成熟期、变化规律等。
 *** 逾期天数（days past due,dpd）
-逾期天数 = 实际还款日 - 应还款日
-
-DPDN+：表示逾期天数>＝N 天，如 DPD30+表示逾期天数>=30 天的资产
-
-例如，若还款日是每月 8 号，那么 9 号就是逾期第一天。如果客户在 10 号还款，那么逾期 2 天。
+逾期天数 = 实际还款日 - 应还款日.DPDN+：表示逾期天数>＝N 天，如 DPD30+表示逾期天数>=30 天的资产.例如，若还款日是每月 8 号，那么 9 号就是逾期第一天。如果客户在 10 号还款，那么逾期 2 天。
 
 *** 逾期期数（M）
 指实际还款日与应还款日之间的逾期天数，并按区间划分后的逾期状态。M 取自 month on book 的第一个单词。
@@ -400,8 +412,7 @@ https://pic2.zhimg.com/80/v2-b5b4256a397202940da4bcef790aec87_1440w.jpg
 100 天的年化收益率为 12%.其实并不是投入 10 万,100 天后就能得到 11.2 万.
 
 这里的 trick 在于年化收益率,我们只享受了 100 天,只占了一年 365 天的 27.4%.所以一
-年年享受的 12000 收益,也只能计算 27.4%的那部分:
-12000 * 27.4% = 3288 元
+年年享受的 12000 收益,也只能计算 27.4%的那部分: 12000 * 27.4% = 3288 元
 
 和年华收益相关的指标是 "近*年收益"或 "成立以来收益". 每个月定投 1000 元,一年投了
 12 期,12000 元, 定投结束连本带利赎回了 15000 元,那么定投这只基金的 "近一年定投收
@@ -412,6 +423,9 @@ https://pic2.zhimg.com/80/v2-b5b4256a397202940da4bcef790aec87_1440w.jpg
 年化收益率就是一整年的收益率，年化 4.6%就是存一万一年利息 460 元人民币，7天的收益＝460÷365x7.
 
 *** 年/月/日利率
+
+
+
 ** 小米金融
 *** 商业模式
 助贷，联合贷等对于网络贷款业务而言，资金\流量\风控三者是有机组成。像银行等传统金融机构本身具有资金和放贷业务资质，但是缺乏线上获客渠道\能力，资金利用率不高。
@@ -553,40 +567,74 @@ https://pic2.zhimg.com/80/v2-b5b4256a397202940da4bcef790aec87_1440w.jpg
 
 **** 贷款产品类型
 
-大额长期贷款、小额贷款、小米贷款
-目标人群分级：A;C-;A|B|C+
-对象：优质用户、高风险用户（怎么认定是高风险用户？）、优质用户与次优用户
-额度有效期：7期；长期；长期
-是否循环：否；是；是
-额度：小米建议最低 30 万；50\1000\2000;1000~20w
-期数：12\24\36 个月；1、3个月；6、9、12 个月
-定价：0.05，差异化利率(这个差异化的利率应该是指如果你的信用分越高，你的利率就越低)；0.065%,差异化利率；0.05%,差异化利率（这里的利率是日息，万 5,意思就是借 10000,每天需要还 5 元，转化为年利率就是 5％×360=18%，月息就是 5%*30=1.5%）
+| 产品类型     | 大额长期贷款 | 小额贷款     | 小米贷款           |
+| 目标人群分级 | A            | C-           | A/B/C+             |
+| 额度有效期   | 7 期         | 长期         | 长期               |
+| 是否循环     | 否           | 是           | 是                 |
+| 对象         | 优质用户     | 高风险用户   | 优质用户与次优用户 |
+| 额度         | 最低 30 万   | 50\1000\2000 | 1000~20w           |
+| 期数         | 12\24\36     | 1、3 个月    | 6、9、12 个月      |
+| 年化利率     | 0.05%        | 0.065%       | 0.05%              |
+| 还款方式     | 等额本息     | 等额本息     | 等额本息/先息后本  |
+|              |              |              |                    |
+
+- 等额本息
+
+假设你买个房子，贷款 200 万，还款 30 年，按照现在房贷基准利率 4.9%打九折计算，按照等额本息的话，30 年下来你连本带利要还给银行 360.97 万元，去掉本金利息就是 160.97 万元。
+
+- 先息后本
+
+注：所以小米的贷款类型主要有 3 种。年化利率 0.05%,意思是借 10000,每天需要还 5 元，转化为年利率就是 5％×360=18%，月息就是 5%*30=1.5%。小米实行的是差异化利率，如果你的信用分越高，你的利率就越低。
 还款方式：等额本息；等额本息；小米贷款全量用户还款方式有两种，一是等额本息，另外一种是先息后本[fn:4]。
 逾期罚息:利率上浮 50%,真实年化不超过 24%.
 
 ** 基本的信贷逻辑
-** 授信数据提供商
+*** 反欺诈
+https://zhuanlan.zhihu.com/p/130743681
 
-provider 字段
+https://pic3.zhimg.com/v2-1201843a1e709777afd537d2de77eca9_r.jpg
 
-NONE(0, "未分配"),
-MIFI(1, "小米金融"),
-NANJING(2, "南京银行"),
-DUMIAO(3, "读秒"),
-COMPOSITE(4, "复合渠道"),
-LOAN_MARKET(5, "贷款超市"),
-BAIRONG(6, "百融"),
-TONGDUN(7, "同盾"),
-TIANCHUANG(8, "天创"),
-UMENG(9, "友盟"), /随机流量/
-WEICHENG(10, "卫诚"), /回捞/
-EXTRA_DATA(11, "补充数据项"),/回捞/
-PBC_NANJING(12, "人行征信-南京"),
-PBC_XINWANG(13, "人行征信-新网"),
-PBC_BOHAI_XT(14, "人行征信-渤海信托"),
-PBC_BAIXIN(15, "人行征信-百信银行"),
-PBC_SCXJ(17, "人行征信-尚城消金"),
-PBC_ZHNEXING(18, "人行征信-振兴消金"),
+https://picb.zhimg.com/80/v2-14541764297f31dfb71a32e8283f6053_1440w.jpg
+
+*** 风险定价
+价格的差异仅仅是狭义上的风险定价。如果从表现形式来看的话，除了价格差异化以外，额度差异化、还款期限差异化及还款方式差异化都能够被认为是风险定价的表现形式。
+
+贷中提额\贷前提价\.
+
+提价说的是利率的提升是么？
+
+*所以说贷前提价，就是提升贷款利率，那么对哪些人提高利率呢？就是所谓的在模型授信通过人群里风险相对较高的“坏人”。* 所以提额的逻辑是要找模型授信通过人群中的“好人”。 那么，怎么去找这好人和坏人呢？现有的模型不足之处是什么？
+
+- 额度差异化
+
+针对不同用户的风险情况，给予差异化的额度，能够有效地控制风险敞口并且拉开各级用户间的授信差，从而最大化提升优质用户的价值及降低次级用户的风险损失。
+
+- 还款期限差异化
+
+另外一种定价差异化的方式为还款期限差异化。因为从概率论而言，风险概率越高的个体，风险敞口的暴露时间越长，则违约的概率就越高。所以从实际应用出发，符合放款标准但风险相对较高的用户往往能够获得的单笔贷款期限也越短。
+
+- 还款方式差异化
+
+还款方式差异化决定了贷款的本金暴露情况，所以也会根据用户的风险进行变化。一般来说，先息后本的产品往往被认为是风险最高的还款方式，因为其存在本金占用率高且还款现金流先小后大的特点，所以其暴露的风险也越高。
+
+风险定价：利润的获取一方面要提高
+
+利润 = 销售收入-成本
+
+销售收入 = 利率 * 在贷余额
+
+成本 = 风险成本 + 其他成本
+
+风险成本 = 违约概率*风险敞口*贷款违约损失
+
+从风险定价公式可以看出，企业的使命就是要获取高额利润，那么一方面要提高销售收入（包括获客，风险定价），那么也需要控制成本（人员成本），为什么每家公司的贷款余额很重要，通过了解贷款余额，就能知道他们家的销售收入，而了解一家公司的贷款违约率水平\资产不良率，可以知道一家公司的风险成本。
+
+- 额度调整
+
+优质用户额度上升
+*** 贷后流转
+
+贷后流转率报表！
 
 
 不同特征在哪个环节调用一定要牢记清楚！比如说，有盟数据在反欺诈、多头未通过的人群上就不能使用！！！
@@ -603,9 +651,7 @@ PBC_ZHNEXING(18, "人行征信-振兴消金"),
 如果通过多头，那么看看是否会接入人行征信，如果是多头拒绝，那么会回捞一批高多头的用户
 
 *** 人行征信
-授信时，小米自身没有强制要求人行征信授权，而在联合贷时，则会要求进人行征信。
-新版的人行征信的信息更新速度为 T+1 上报。说是 T+1 其实更多的是自己定，一般为 2 周
-到一个月不等。
+授信时，小米自身没有强制要求人行征信授权，而在联合贷时，则会要求进人行征信。新版的人行征信的信息更新速度为 T+1 上报。说是 T+1 其实更多的是自己定，一般为 2 周 到一个月不等。
 **** 小米征信策略
 **** 常见问题
 ***** 如何对不同的人群进行查验 auc？
@@ -615,8 +661,6 @@ PBC_ZHNEXING(18, "人行征信-振兴消金"),
  #+end_src
 
 **** 聚信力多头规则替换反欺诈
-
-**
 
 * 工作中常见问题
 *** 人群分布
@@ -674,25 +718,9 @@ PBC_ZHNEXING(18, "人行征信-振兴消金"),
 ** 业务相关内容
 需要对所使用的表的内容掌握清楚！（多动脑，勤思考！）在提问之前，需要认真地思考整个建模流程，包括业务背景，所使用数据来源等。
 *** 常见建模数据库表地址
-
 #+begin_src R ::results output graphics :file fig_1.png :exports both
 mf_dm_data_library()
 #+end_src
-
-百融表：
-
-#+begin_src R ::results output graphics :file fig_1.png :exports both
-  sdf_bairong = spark_read_parquet(sc, "sdf_bairong", "/user/h_mifi/user/yepeng3/bairong_job_parquet", memory = F, overwrite = T)   # 增量表
-#+end_src
-
-常用表名：
-
-| 表名                | 地址                                                               | 属性                                           |
-| 百融表              | /user/h_mifi/user/yepeng3/bairong_job_parquet                      | 这个表 update_time 不能当作 credit_time 使用！ |
-|                     |                                                                    |                                                |
-| user_event          | /user/h_data_platform/platform/mifi/user_event                     | 了解是否进入反欺诈，申请制等信息               |
-| 贷前模型 score 地址 | /user/h_data_platform/platform/mifi/mifi_model_prm_risk_score/data | version == "6.37",意味着模型版本号是 6.37      |
-|                     |                                                                    |                                                |
 
 *** 授信通过人群\进入多头\多头拦截\主政策\主模型通过
 
@@ -829,18 +857,12 @@ sdf_cp_credit_instruction =
 #+end_src
 
 **** V7 模型
-
 包括高多头中回捞的用户。
 
 **** 如何查看不同渠道用户？
 
-     #+begin_src R ::results output graphics :file fig_1.png :exports both
-
-     #+end_src
-
 *** 人群风险分档
-政策根据模型分以及自身策略规则，将人群进行分档。以便用于用户提额，提价等等。
-一般将人群分为 A,B,C,D 四档。
+政策根据模型分以及自身策略规则，将人群进行分档。以便用于用户提额，提价等等。一般将人群分为 A,B,C,D 四档。
 
 *** 模型效力评价
 **** 区分度指标
@@ -888,7 +910,6 @@ step4: 将各分箱的 index 进行求和，即得到最终的 PSI。
 所有 id 相关的字段，字符类型都要存储为 string。如 xiaomi_id，con_id，mifi_id。（R的数值型精度是 16 位有效数字，长整型最后几位会以随机数代替）
 
 *** 信用评分卡建模流程
-
 1.数据准备
 
     选取样本：一定时间内，已经成熟的申请制数据
@@ -1167,7 +1188,6 @@ df %>%
 ***** 上传 hdfs 的验证集结果需要 check 数据列名，会遗失数据!!
 ***** 数据 join 时一定要注意去重！！ 所以一定要精简变量！！
 ***** 字符串大小写问题一定要注意，字符串一律定义为小写！！！
-
       #+begin_src R ::results output graphics :file fig_1.png :exports both
         data <- train_data %>%
             mutate(province = as.character(province)) %>%
