--- a/wiki/业务知识.org
+++ b/wiki/业务知识.org
@@ -29,7 +29,7 @@
     - [[#逾期天数days-past-duedpd][逾期天数（days past due,dpd）]]
     - [[#逾期期数m][逾期期数（M）]]
     - [[#vintage-分析也称为账龄分析][vintage 分析（也称为账龄分析）]]
-    - [[#滚动率分析][滚动率分析]]
+    - [[#滚动率分析roll-rate][滚动率分析(roll rate)]]
     - [[#如何利用滚动率与-vintage-确定响应变量-y][如何利用滚动率与 vintage 确定响应变量 Y？]]
     - [[#迁移率flow-rate-analysis][迁移率（flow rate analysis）]]
     - [[#坏账准备金][坏账准备金]]
@@ -55,6 +55,9 @@
   - [[#基本的信贷逻辑][基本的信贷逻辑]]
     - [[#反欺诈][反欺诈]]
     - [[#风险定价][风险定价]]
+    - [[#定额定费][定额定费]]
+    - [[#额度策略][额度策略]]
+    - [[#特征穿越][特征穿越]]
     - [[#贷后流转][贷后流转]]
   - [[#参与项目][参与项目]]
       - [[#相关策略][相关策略]]
@@ -317,20 +320,18 @@ vintage 分析用于确定合适的 *表现期* 。
 
 https://pic3.zhimg.com/80/v2-855513c1db679f5602e7a189fb9f6b0a_1440w.jpg
 
-从上图可以看似, vintage 分析主要看的还是逾期率, M1,M2,M3....M12 的逾期率, 如果说
-在经过 9 个 MOB 后逾期率开始稳定,那么说明帐户的成熟期就是 9 个月.
+从上图可以看似, vintage 分析主要看的还是逾期率, M1,M2,M3....M12 的逾期率, 如果说在经过 9 个 MOB 后逾期率开始稳定,那么说明帐户的成熟期就是 9 个月.
 
 为啥需要通过 vintage 分析来确定表现期？因为虽然滚动率分析确定了 M4+ 作为坏的程度，但是对于 12 期的产品，有些帐户是在前 4 期 MOB(也就是 MOB1~MOB4,经过 4 个表现期)就达到 M4+,有些是在后几期才达到 M4+.
 
-在实际应用过程中，常常需要将滚动率和 vintage 分析结合起来使用。比如说：
-BAD = 账户经过 9 期表现期后，逾期状态为 M4+（逾期超过 90 天），此时 Y=1.
+在实际应用过程中，常常需要将滚动率和 vintage 分析结合起来使用。比如说：BAD = 账户经过 9 期表现期后，逾期状态为 M4+（逾期超过 90 天），此时 Y=1.
 good = 经过 9 期表现期，但是未达到 M4+逾期状态，此时 Y=0.
 intermediate = 未进入 9 期表现期，账户还未成熟，无法定义好坏，也就是不定样本。
 
 参考资料：
 https://zhuanlan.zhihu.com/p/81027037
 
-*** 滚动率分析
+*** 滚动率分析(roll rate)
 滚动率分析就是从某个观察点之前的一段时间（观察期）的最坏的状态，向观察点之后的一段时间（表现期）的最坏状态的发展变化情况。
 
 滚动率分析的具体操作步骤为：
@@ -345,11 +346,7 @@ https://zhuanlan.zhihu.com/p/81027037
 
 滚动率分析用于定义客户的 *好坏程度* 。
 
-比如说:逾期状态为 M1 的客户，未来有 81%会回到正常状态，即从良率(从 M1+状态变成
-C)为 81%，有 7%会恶化(从 M1+ 变成 M2 以上)，13%会保持 M1 状态；逾期状态为 M4+的
-客户，从良率仅为 4%(从 M4+状态变成 C)，有 80%会继续保持此状态。那么说明 M4+ 的客
-户已经坏透了,几乎不会从良.为了让风控模型有更好的区分能力,需要将客户好坏界限尽可
-能清晰.
+比如说:逾期状态为 M1 的客户，未来有 81%会回到正常状态，即从良率(从 M1+状态变成 C)为 81%，有 7%会恶化(从 M1+ 变成 M2 以上)，13%会保持 M1 状态；逾期状态为 M4+的客户，从良率仅为 4%(从 M4+状态变成 C)，有 80%会继续保持此状态。那么说明 M4+ 的客户已经坏透了,几乎不会从良.为了让风控模型有更好的区分能力,需要将客户好坏界限尽可能清晰.
 
 *** 如何利用滚动率与 vintage 确定响应变量 Y？
 
@@ -601,6 +598,8 @@ https://picb.zhimg.com/80/v2-14541764297f31dfb71a32e8283f6053_1440w.jpg
 
 贷中提额\贷前提价\.
 
+模型组中的贷前定价是预测不同定价的人群额度使用率。
+
 提价说的是利率的提升是么？
 
 *所以说贷前提价，就是提升贷款利率，那么对哪些人提高利率呢？就是所谓的在模型授信通过人群里风险相对较高的“坏人”。* 所以提额的逻辑是要找模型授信通过人群中的“好人”。 那么，怎么去找这好人和坏人呢？现有的模型不足之处是什么？
@@ -632,6 +631,23 @@ https://picb.zhimg.com/80/v2-14541764297f31dfb71a32e8283f6053_1440w.jpg
 - 额度调整
 
 优质用户额度上升
+
+*** 定额定费
+
+客户申请授信，需要对不同的客户定设置不同的授信额度和利率，审批策略完后，将会进入到额度定 价的阶段。做完收入模型和申请模型后，就可将收入模型和申请模型做一个二维矩阵，对于矩阵中每个单元格设定一定的额度水平，在此基础上授予相应的额度。
+
+*** 额度策略
+
+额度计算整体框架：通常在客户授信额度方面，有一个输出的框架，会做一个决策树分类。对于低分风险高授信，反之高风险低授信。信用额度主要参考客户的收入、行业/职级、进件渠道，同时参考申请人的个人信用信息，结合进行授信。
+客户的最终授信额度：根据客户的进件渠道、类型、和数据采集情况，依据额度授予框架和客户满足的特殊情形，对关键人、公务员、突破线客户分别授信，对其他的客户按照收入认定额度授予信贷额度，对于满足特殊条件的客户进行单点保底额度设定。
+
+*** 特征穿越
+比如购买行为预测，给你前三个月的数据，预测后一周的用户购买行为，你用后一周的用户行为如点击率什么的，放进前三个月的特征中，就是特征穿越了。
+
+这个问题经常发生在数据回溯中，外部数据由于数据存储、更新方式等原因，建模所需要的历史数据往往无法被直接回溯，那么经常会直接使用当前数据建模，发生数据穿越，很容易造成模型不稳定，效果不达预期。
+
+一般是用通过率和坏账率 2 个量化指标衡量风险管理水平！
+
 *** 贷后流转
 
 贷后流转率报表！
