--- a/wiki/统计.org
+++ b/wiki/统计.org
@@ -941,7 +941,6 @@ mifi_model_feature_woe_encoding_all(df, feat_cuts, category_feature_names = NULL
 #+END_SRC
 
 **** one-hot 编码
-
 **** dummy 编码
 **** 模型效果评估
 [https://pic4.zhimg.com/80/v2-9ca0c8f67e8566b7318175406ce19a21_1440w.jpg]
@@ -2412,40 +2411,65 @@ kmeans.labels_
 kmeans.predict([[0, 0], [12, 3]])
 kmeans.cluster_centers_
 
-  import pandas as pd
- from sklearn.datasets import load_iris
- from sklearn.cluster import KMeans
- import matplotlib.pyplot as plt
+import pandas as pd
+from sklearn.datasets import load_iris
+from sklearn.cluster import KMeans
+import matplotlib.pyplot as plt
 
- iris = load_iris()
- X = pd.DataFrame(iris.data, columns=iris['feature_names'])
- #print(X)
- data = X[['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)']]
+iris = load_iris()
+X = pd.DataFrame(iris.data, columns=iris['feature_names'])
+#print(X)
+data = X[['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)']]
 
- sse = {}
- for k in range(1, 10):
-     kmeans = KMeans(n_clusters=k, max_iter=1000).fit(data)
-     data["clusters"] = kmeans.labels_
-     #print(data["clusters"])
-     sse[k] = kmeans.inertia_ # Inertia: Sum of distances of samples to their closest cluster center
- plt.figure()
- plt.plot(list(sse.keys()), list(sse.values()))
- plt.xlabel("Number of cluster")
- plt.ylabel("SSE")
- plt.show()
+sse = {}
+for k in range(1, 10):
+    kmeans = KMeans(n_clusters=k, max_iter=1000).fit(data)
+    data["clusters"] = kmeans.labels_
+    #print(data["clusters"])
+    sse[k] = kmeans.inertia_ # Inertia: Sum of distances of samples to their closest cluster center
+plt.figure()
+plt.plot(list(sse.keys()), list(sse.values()))
+plt.xlabel("Number of cluster")
+plt.ylabel("SSE")
+plt.show() 
      #+end_src
 
+#+begin_src ipython :session :exports both :results raw drawer
+import
+  import numpy
+import numpy
+1+1
+import numpy as np
+import numpy as np
+from 
+#+end_src
+
+#+RESULTS:
+:results:
+# Out [5]: 
+:end:
+
+     
+#+begin_src python :results output
  #+begin_src python
-  from sklearn.cluster import KMeans
+from sklearn.cluster import KMeans
  import numpy as np
  X = np.array([[1, 2], [1, 4], [1, 0],
                 [10, 2], [10, 4], [10, 0]])
  kmeans = KMeans(n_clusters=2, random_state=0).fit(X)
  kmeans.labels_
  kmeans.predict([[0, 0], [12, 3]])
- kmeans.cluster_centers_ 
+ kmeans.cluster_centers_  
  #+end_src
 
+
+#+begin_src python
+import numpy
+
+#+end_src
+
+
+ 
 ** Gussian mixture model
 
 \begin{array}{l}{Y_{i} | X_{i} \text { independent for } i=1, \ldots, n} \\ {Y_{i}\left|X_{i}=x \sim f_{\xi}(y | x) d y \text { for } i=1, \ldots, n\right.} \\ {f_{\xi}(y | x)=\sum_{r=1}^{k} \pi_{r} \frac{1}{\sqrt{2 \pi} \sigma_{r}} \exp \left(-\frac{\left(y-x^{T} \beta_{r}\right)^{2}}{2 \sigma_{r}^{2}}\right)^{2}} \\ {\xi=\left(\beta_{1}, \ldots, \beta_{k}, \sigma_{1}, \ldots, \sigma_{k}, \pi_{1}, \ldots, \pi_{k-1}\right) \in \mathbb{R}^{k p} \times \mathbb{R}_{>0}^{k} \times \Pi} \\ {\Pi=\left\{\pi ; \pi_{r}>0 \text { for } r=1, \ldots, k-1 \text { and } \sum_{r=1}^{k-1} \pi_{r}<1\right\}}\end{array}
@@ -2560,8 +2584,6 @@ $$
 网络深度加到 100 层，也依然是这样。这样的话神经网络就失去了意义。
 
 所以这里要对网络注入灵魂：激活层。
-
-2.激活层
 
 简而言之，激活层是为矩阵运算的结果添加非线性的。常用的激活函数有三种，分别是阶跃函数、Sigmoid 和 ReLU。不要被奇怪的函数名吓到，其实它们的形式都很简单，如下图（更正：sigmoid 在负无穷是应趋近于 0）：
 
