--- a/wiki/git-wiki.org
+++ b/wiki/git-wiki.org
@@ -7,6 +7,8 @@
   - [[#magit-1][magit]]
 - [[#linux][linux]]
   - [[#常用文件夹][常用文件夹]]
+  - [[#常用-linux-命令][常用 linux 命令]]
+  - [[#rg][rg]]
   - [[#打开-terminial][打开 terminial]]
   - [[#打开文件夹][打开文件夹]]
   - [[#删除文件夹][删除文件夹]]
@@ -187,6 +189,17 @@ git push -f origin master #强列推荐
 | .spacemacs.d | nautilus ~/.spacemacs.d |
 | rime         | ~/.config/fcitx/rime    |
 |              |                         |
+** 常用 linux 命令
+谁用谁知道～
+    #+begin_src
+cd .. #返回上一级菜单
+cd / #返回根目录
+   #+end_src
+** rg
+展示当前目录下所有 pdf 文件。
+#+begin_src
+   rg --files -t "pdf"
+#+end_src
 
 ** 打开 terminial
 ctrl + alt + t 打开终端
@@ -210,13 +223,14 @@ nautilus ~/.emacs.d
 rmdir ~/.spacemacs.d
    #+end_src
 
+#+begin_src
+rm -rf some_dir
+#+end_src
 
    #+begin_src
 ps -aux #查看进程信息
 ps -aux | grep mysql #查看具体某个进程
 kill -9 pid #kill process
-
-
    #+end_src
 
 
